modification de competence

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             <section class="section">
                 <h2 class="section-title">Summary</h2>
                 <p class="summary">
-                    Développeur Full-stack MERN motivé et évoluant dans l'écosystème JavaScript, avec une expérience pratique en projets e-commerce, APIs REST, et applications web modernes. Proficient in creating user-friendly interfaces, designing robust RESTful APIs, and ensuring seamless deployment processes. Successfully developed an interactive e-commerce site at GoMyCode, enhancing user experience and operational efficiency through a blend of technical expertise and innovative approaches to solve future projects.
+                    Développeur Full-stack MERN motivé et évoluant dans l'écosystème JavaScript, avec une expérience pratique en projets e-commerce, APIs REST, et applications web modernes. Maîtrise de la création d'interfaces conviviales, de la conception d'API RESTful robustes et de la garantie de processus
+                    de déploiement transparents. Développement réussi d'un site de commerce électronique interactif sur GoMyCode, améliorant
+                    l'expérience utilisateur et l'efficacité opérationnelle grâce à un mélange d'expertise technique et d'approches
+                    innovantes pour résoudre de futurs projets.
                 </p>
             </section>
 
@@ -48,7 +51,7 @@
                             <li>Système de notation produits, gestion des stocks, tableau de bord vendeur/acheteur</li>
                             <li>Déploiement en production avec gestion des environnements</li>
                         </ul>
-                        <div class="technologies">Technologies: React.js, Next.js, Node.js, Express.js, MongoDB, JWT, Stripe API</div>
+                        <div class="technologies">Technologies: React.js, Next.js, Node.js, Express.js, MongoDB, JWT</div>
                     </div>
                 </div>
 
@@ -191,7 +194,7 @@
                     </div>
                     <div class="skill-category">
                         <strong>Outils & DevOps</strong>
-                        <div class="skill-list">Git, GitHub, Vercel, Netlify, Docker, CI/CD, Postman</div>
+                        <div class="skill-list">Git, GitHub, Vercel, Netlify, CI/CD, Postman</div>
                     </div>
                     <div class="skill-category">
                         <strong>Sécurité</strong>
@@ -199,7 +202,7 @@
                     </div>
                     <div class="skill-category">
                         <strong>Testing</strong>
-                        <div class="skill-list">Jest, Mocha, Tests unitaires et d'intégration</div>
+                        <div class="skill-list">Jest, Tests unitaires et d'intégration</div>
                     </div>
                 </div>
             </section>
